# gramatico-parser

./: .gitignore  .gitmodules  CMakeLists.txt  grammar.cgf
benchmark/: CMakeLists.txt  find_lexic_unit.cpp
data/grammar/: grammar.cnf
doc/: notas.md
include/grammar/: cky.hpp  constituency.hpp  igrammar.hpp  input_rules.hpp  pcfg.hpp  rules.hpp
include/utils/: binary_tree.hpp  matrix.hpp
src/grammar/: CMakeLists.txt
tests/: CMakeLists.txt  grammar_tests.cpp  input_rules_test.cpp  pcfg_tests.cpp
tools/: CMakeLists.txt  cgftocfn.py  probank_parser.py
